<resources>
    <string name="app_name">MPRecycler</string>
    <string name="txtLoginUser">User:</string>
    <string name="txtLoginPassword">Password:</string>
    <string name="chbLoginRemember">Remember user</string>
    <string name="btnLogin">Login</string>
    <string name="btnLoginCancel">Cancel</string>
    <string name="hintUser">Introduce an user</string>
    <string name="hintPass">Introduce a password</string>
    <string name="savedUser">Saved</string>
    <string name="contentdescription">contentDescription</string>
    <string name="txt_product_name">Name</string>
    <string name="txt_product_description">Description</string>
    <string name="txt_product_concentration">Concentration</string>
    <string name="txt_product_brand">Brand</string>
    <string name="txt_product_price">Price</string>
    <string name="txt_product_stock">Stock</string>
    <string name="txt_product_image">Image</string>
    <string name="btnRegister">Register</string>
    <string name="btnOkLogin">Login</string>
    <string name="action_add_product">Add Product</string>
    <string name="action_setting_account">Account settings</string>
    <string name="action_setting_general">General settings</string>
    <string name="action_sortbyname_product">Sort by name</string>
    <string name="action_sortbybrand_product">Sort by brand</string>
    <string name="action_sortbyprice_product">Sort by price</string>
    <string name="action_sortbystock_product">Sort by stock</string>
    <string name="action_sortbyimage_product">Sort by image</string>
    <string name="forgot_password">Forgot password</string>
    <string name="edtRegisterUser">Name</string>
    <string name="edtRegisterPassword">Password</string>
    <string name="edtRegisterMail">Mail</string>
    <string name="txtRegisterMunicipaly">Municipaly</string>
    <string name="txtRegisterLocality">Locality</string>
    <string name="chkSuscription">Suscribe to the feed</string>
    <string name="chkTerms">I accept the condition terms</string>
    <string name="btnRegisterOk">Register</string>
    <string name="txtRegisterType">Entity type</string>
    <string name="rbRegisterBusiness">Business</string>
    <string name="registerSpinnerType">Choose a type:</string>
    <string name="rbRegisterPersonMale">Male</string>
    <string name="rbRegisterPersonFemale">Female</string>
    <string name="pref_mail_summary">User mail</string>
    <string name="pref_mail_title">Mail</string>
    <string name="message">%1$s (%2$s)</string>
    <string name="addedProduct">The product has been added</string>
    <string name="editedProduct">The product has been edited</string>
    <string name="context_delete">Delete product</string>
    <string name="delete_ok">OK</string>
    <string name="delete_cancel">CANCEL</string>
    <string name="product_deleted">The product has been deleted</string>
    <string name="action_canceled">Action canceled</string>
    <string name="title_delete">Delete confirmation</string>
    <string name="message_delete">Do you want to remove this product?</string>

</resources>
